# terok-sandbox

./: .gitignore  .importlinter  AGENTS.md  CHANGELOG.md  MANIFEST.in  Makefile  README.md  REUSE.toml  SECURITY.md  mkdocs.yml  properdocs.yml  pyproject.toml  sonar-project.properties  tach.toml  vulture_whitelist.py
.github/: dependabot.yml  requirements-ci.txt
.github/workflows/: analysis.yml  ci.yml  docs.yml  inventory.yml  no-git-deps.yml  release.yml  sonar.yml  sonar_pr.yml  test-matrix.yml
docs/: SUMMARY.md  credentials-encryption.md  index.md  prepare-run-cleanup.md
docs/dev/: manual-krun-vsock-transport.md
src/terok_sandbox/: __init__.py  __main__.py  _exit_codes.py  _setup.py  _stage.py  _yaml.py  api.py  cli.py  commands.py  config.py  config_schema.py  config_stack.py  credential_db.py  credential_proxy_lifecycle.py  diagnostics.py  doctor.py  gate_server.py  gate_tokens.py  git_gate.py  hardening.py  launch.py  operator_cli.py  paths.py  podman.py  podman_args.py  port_registry.py  runtime.py  sandbox.py  setup_stamp.py  shield.py  ssh.py  supervision.py
src/terok_sandbox/_util/: __init__.py  _apparmor.py  _fs.py  _landlock.py  _logging.py  _naming.py  _net.py  _pidfile.py  _sanitize.py  _selinux.py  _subprocess_env.py  _systemctl.py  _systemd_caps.py  _templates.py  _yaml.py
src/terok_sandbox/commands/: __init__.py  _types.py  credentials.py  doctor.py  gate.py  launch.py  sandbox.py  shield.py  ssh.py  supervisor.py  vault.py
src/terok_sandbox/credential_proxy/: __main__.py  constants.py  server.py  ssh_agent.py
src/terok_sandbox/credential_proxy/resources/systemd/: terok-credential-proxy.service  terok-credential-proxy.socket
src/terok_sandbox/credentials/: __init__.py  db.py  encryption.py  lifecycle.py  migrations.py  ssh.py  ssh_keypair.py  systemd_creds.py
src/terok_sandbox/credentials/proxy/: __init__.py  __main__.py  constants.py  server.py  ssh_agent.py
src/terok_sandbox/credentials/proxy/resources/systemd/: terok-credential-proxy-socket.service  terok-credential-proxy.service  terok-credential-proxy.socket
src/terok_sandbox/gate/: __init__.py  __main__.py  hooks.py  lifecycle.py  mirror.py  server.py  tokens.py
src/terok_sandbox/gate/resources/systemd/: terok-gate-socket.service  terok-gate.socket  terok-gate@.service
src/terok_sandbox/integrations/: __init__.py  clearance.py  shield.py
src/terok_sandbox/resources/: supervisor_wrapper.py
src/terok_sandbox/resources/apparmor/: install_profile.sh  terok-gate  terok-vault
src/terok_sandbox/resources/bridges/: ensure-bridges.sh  ssh-agent-bridge.sh
src/terok_sandbox/resources/hooks/: _supervisor_state.py  supervisor_hook.py
src/terok_sandbox/resources/selinux/: install_policy.sh  terok_gate.te  terok_socket.te  terok_vault.te
src/terok_sandbox/resources/templates/: ssh_config.template
src/terok_sandbox/runtime/: __init__.py  gpu.py  krun.py  krun_transport.py  null.py  podman.py  protocol.py
src/terok_sandbox/supervisor/: __init__.py  children.py  install.py  janitor.py  launcher.py  main.py  sidecar.py
src/terok_sandbox/tools/: hardening.py
src/terok_sandbox/vault/: __init__.py  __main__.py  audit.py  constants.py  lifecycle.py  scope_sockets.py  ssh_signer.py  token_broker.py
src/terok_sandbox/vault/daemon/: __init__.py  audit.py  lifecycle.py  status.py  token_broker.py
src/terok_sandbox/vault/resources/systemd/: terok-vault-socket.service  terok-vault.service  terok-vault.socket
src/terok_sandbox/vault/ssh/: __init__.py  keypair.py  manager.py  scope_sockets.py  signer.py
src/terok_sandbox/vault/store/: __init__.py  db.py  encryption.py  kernel_keyring.py  migrations.py  recovery.py  status.py  systemd_creds.py  tiers.py
tests/: __init__.py  constants.py
tests/containers/: Containerfile.alpine  Containerfile.debian12  Containerfile.debian13  Containerfile.fedora43  Containerfile.fedora44  Containerfile.mageia  Containerfile.podman  Containerfile.ubuntu2404  Containerfile.ubuntu2604  Containerfile.void  matrix.yml  run-matrix.sh
tests/integration/: __init__.py  conftest.py  test_container_stop.py  test_credential_proxy_stories.py  test_supervisor_respawn.py  test_vault_stories.py
tests/integration/credentials/: conftest.py  test_chooser_matrix.py
tests/stories/: __init__.py  conftest.py
tests/unit/: __init__.py  conftest.py  test_apparmor.py  test_cli_commands.py  test_clone_cache.py  test_command_tree.py  test_commands_extras.py  test_config.py  test_config_schema.py  test_config_stack.py  test_container_remove.py  test_credential_audit.py  test_credential_db.py  test_credential_db_ssh.py  test_credential_encryption.py  test_credential_proxy_lifecycle.py  test_credential_proxy_server.py  test_credential_proxy_systemd_socket.py  test_diagnostics.py  test_doctor.py  test_entry_point_modules_importable.py  test_error_surfacing.py  test_gate_backup_restore.py  test_gate_hooks.py  test_gate_http_server.py  test_gate_mirror_extras.py  test_gate_server.py  test_gate_server_extras.py  test_gate_sync_model.py  test_gate_tokens.py  test_git_gate_ssh_env.py  test_gpu.py  test_is_ssh_url.py  test_kernel_keyring.py  test_krun_runtime.py  test_krun_transport.py  test_landlock.py  test_launch.py  test_lazy_imports.py  test_no_stale_relative_imports.py  (+63 more)
tests/unit/runtime/: __init__.py  test_exec_stdio.py  test_null_runtime.py  test_podman_handles.py  test_protocol.py  test_stream_initial_logs.py
