[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "terok-sandbox"
description = "Hardened Podman container runner with gate server and shield integration"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Jiri Vyskocil", email = "jiri@vyskocil.com"},
]
maintainers = [
    {name = "Jiri Vyskocil", email = "jiri@vyskocil.com"},
]
keywords = ["podman", "containers", "sandbox", "security", "isolation"]
requires-python = ">=3.12,<4.0"
dynamic = ["version", "classifiers"]
dependencies = [
    "terok-util @ https://github.com/terok-ai/terok-util/releases/download/v0.1.1a1/terok_util-0.1.1a1-py3-none-any.whl",
    "terok-shield @ https://github.com/terok-ai/terok-shield/releases/download/v0.7.0/terok_shield-0.7.0-py3-none-any.whl",
    "terok-clearance @ https://github.com/terok-ai/terok-clearance/releases/download/v0.7.0/terok_clearance-0.7.0-py3-none-any.whl",
    "platformdirs>=4.10.0",
    "aiohttp>=3.9",
    "cryptography>=46.0.7",
    "jinja2>=3.1",
    "pydantic>=2.9",
    "packaging>=24",
    "sqlcipher3>=0.6.2",
    "keyring>=25.0",
    "ruamel.yaml>=0.18",
    "prompt-toolkit>=3.0",
]

[project.urls]
Homepage = "https://terok.ai/"
Repository = "https://github.com/terok-ai/terok-sandbox"
Documentation = "https://terok-ai.github.io/terok-sandbox/"
Issues = "https://github.com/terok-ai/terok-sandbox/issues"
Changelog = "https://github.com/terok-ai/terok-sandbox/blob/master/CHANGELOG.md"
Security = "https://github.com/terok-ai/terok-sandbox/security/policy"

[project.scripts]
terok-sandbox = "terok_sandbox.cli:main"

[tool.poetry]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

packages = [
  { include = "terok_sandbox", from = "src" },
]
version = "0.1.1a1"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.15"
bandit = ">=1.7"
docstr-coverage = "^2.3.2"
complexipy = ">=5.5.0"
vulture = ">=2.12"
reuse = "^6.2.0"
tach = "^0.35.0"
import-linter = ">=2.1"
pre-commit = ">=4.0"
mypy = ">=2.1.0,<3.0"
# Transitive of pre-commit; 21.2.4 ships with a broken split where
# `virtualenv.discovery.builtin` references `.discover` but `discover.py`
# was extracted to a separate `python_discovery` package and isn't in
# the wheel.  Importing it on Python 3.14 (Fedora 43 default) crashes
# every sdist build-isolation in the matrix runner.
virtualenv = "!=21.2.4"

[tool.poetry.group.test.dependencies]
pytest = ">=9.0.3"
pytest-asyncio = ">=1.4.0"
pytest-cov = ">=4.0"
pytest-timeout = ">=2.0"

[tool.poetry.group.docs.dependencies]
properdocs = ">=1.6.7"
mkdocs-material = ">=9.0"
mkdocstrings = {extras = ["python"], version = ">=0.24"}
mkdocs-literate-nav = ">=0.6"
mkdocs-section-index = ">=0.3"
mkdocs-terok = "^0.7"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "needs_podman: requires podman on the host",
  "needs_vault: vault integration (real server + DB)",
  "needs_host_features: requires systemd-user, real filesystem, host services beyond a plain Python interpreter",
  "needs_systemd_creds: requires systemd-creds ≥ 257 on PATH with the Varlink io.systemd.Credentials interface",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "SIM",    # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B904",   # raise from in except
  "SIM102", # nested if statements
  "SIM105", # contextlib.suppress vs try/except/pass
  "SIM108", # use ternary operator
  "SIM117", # nested with statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["terok_sandbox"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# Static type checking — see `make typecheck`.
[tool.mypy]
python_version = "3.12"
files = ["src/terok_sandbox"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
# ``import-untyped`` fires for libraries that ship without type stubs (yaml);
# ``ignore_missing_imports`` already maps such imports to ``Any``, so the
# extra "stubs missing" diagnostic is just noise.
disable_error_code = ["import-untyped"]
pretty = true
show_error_codes = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)(?:(?P<stage>a)(?P<revision>\\d+))?$"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
folders = [{path = "src"}]
